[tool.poetry]
name = "qarin"
version = "0.1.0"
description = "Qarin: better name matching for screening tools"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
jupyterlab = "^4.1.0"
nomenklatura = "^3.10.3"
faker = "^22.6.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.3.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_dataset = 'data.create_dataset:create'